
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int keynum; int flen; int keydef; } ;
typedef TYPE_1__ fkeyarg_t ;


 int GETFKEY ;
 int ioctl (int ,int ,TYPE_1__*) ;
 int memset (int *,int ,int) ;

void stackOverflow(int index) {
 fkeyarg_t fkey;

 fkey.keynum = index;
 fkey.flen = 16;
 memset(&fkey.keydef, 0, 16);

 ioctl(0, GETFKEY, &fkey);
}
